@@ -186,30 +186,37 @@ public class TagDeNormAttributesUtil {
         return finalDeNormMap;
     }
 
-    public static Map<String, Object> getPropagatedAttributesForNoTags(String tagNamePropagated) {
+    public static Map<String, Object> getPropagatedAttributesForNoTags() {
         // Add tag Propagation, asset does not have any other tag
 
         Map<String, Object> deNormAttrs = new HashMap<>();
 
-        deNormAttrs.put(CLASSIFICATION_TEXT_KEY, tagNamePropagated + FULL_TEXT_DELIMITER);
-        deNormAttrs.put(PROPAGATED_TRAIT_NAMES_PROPERTY_KEY, Collections.singletonList(tagNamePropagated));
-        deNormAttrs.put(PROPAGATED_CLASSIFICATION_NAMES_KEY, CLASSIFICATION_NAME_DELIMITER + tagNamePropagated);
+        deNormAttrs.put(CLASSIFICATION_TEXT_KEY, FULL_TEXT_DELIMITER);
+        deNormAttrs.put(PROPAGATED_TRAIT_NAMES_PROPERTY_KEY, List.of());
+        deNormAttrs.put(PROPAGATED_CLASSIFICATION_NAMES_KEY, CLASSIFICATION_NAME_DELIMITER);
 
         return deNormAttrs;
     }
 
     public static Map<String, Object> getPropagatedAttributesForTags(AtlasClassification propagatedTag,
                                                                      List<AtlasClassification> finalTags,
+                                                                     List<AtlasClassification> finalPropagatedTags,
                                                                      AtlasTypeRegistry typeRegistry,
                                                                      IFullTextMapper fullTextMapperV2) throws AtlasBaseException {
         // Add tag Propagation, asset having other tags
         Map<String, Object> deNormAttrs = new HashMap<>();
 
-        deNormAttrs.put(CLASSIFICATION_TEXT_KEY, getClassificationTextKey(finalTags, typeRegistry, fullTextMapperV2));
+        if (CollectionUtils.isNotEmpty(finalTags))
+            deNormAttrs.put(CLASSIFICATION_TEXT_KEY, getClassificationTextKey(finalTags, typeRegistry, fullTextMapperV2));
 
         //filter propagated attachments
-        List<String> propTraits = finalTags.stream()
-                .filter(tag -> !propagatedTag.getEntityGuid().equals(tag.getEntityGuid()))
+        updateDenormAttributesForPropagatedTags(propagatedTag, finalPropagatedTags, deNormAttrs);
+
+        return deNormAttrs;
+    }
+
+    private static void updateDenormAttributesForPropagatedTags(AtlasClassification propagatedTag, List<AtlasClassification> finalPropagatedTags, Map<String, Object> deNormAttrs) {
+        List<String> propTraits = finalPropagatedTags.stream()
                 .map(AtlasStruct::getTypeName)
                 .collect(Collectors.toList());
 
@@ -224,8 +231,6 @@ public class TagDeNormAttributesUtil {
             deNormAttrs.put(PROPAGATED_TRAIT_NAMES_PROPERTY_KEY, Collections.singletonList(propagatedTag.getTypeName()));
             deNormAttrs.put(PROPAGATED_CLASSIFICATION_NAMES_KEY, CLASSIFICATION_NAME_DELIMITER + propagatedTag.getTypeName());
         }
-
-        return deNormAttrs;
     }
 
     private static String getClassificationTextKey(List<AtlasClassification> tags, AtlasTypeRegistry typeRegistry, IFullTextMapper fullTextMapperV2) throws AtlasBaseException {
